--- a/app/src/main/res/layout/activity_full_practice.xml
+++ b/app/src/main/res/layout/activity_full_practice.xml
@@ -7,4 +7,30 @@
     android:layout_height="match_parent"
     tools:context=".practice.FullPractice">
 
+    <FrameLayout
+        android:id="@+id/videoContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- 전면 카메라 미리보기 -->
+        <androidx.camera.view.PreviewView
+            android:id="@+id/previewView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!-- 서버에서 받아온 실루엣 영상 -->
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/playerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:visibility="visible"
+            app:surface_type="texture_view" />
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
