--- a/app/src/main/res/layout/activity_start_first.xml
+++ b/app/src/main/res/layout/activity_start_first.xml
@@ -7,52 +7,63 @@
     android:layout_height="match_parent"
     tools:context=".startPage.FirstStart">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2" />
+
 
     <ImageView
         android:id="@+id/danzleLogoImage"
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:background="@drawable/danzle_logo"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/danzleTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="170dp"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintBottom_toTopOf="@id/danzleTextView"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineImage" />
 
     <TextView
         android:id="@+id/danzleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Danzle"
         android:fontFamily="@font/tiltwarp_regular"
+        android:text="Danzle"
         android:textSize="30dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/danzleLogoImage"
-        app:layout_constraintBottom_toTopOf="@id/signinButton"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/danzleLogoImage" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.55" />
 
     <Button
         android:id="@+id/signinButton"
-        android:layout_width="304dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzlePink"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/danzleTextView"
-        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
         android:fontFamily="@font/inter_18pt_semibold"
-        android:layout_marginTop="130dp"
+        android:gravity="center"
         android:text="Sign In"
         android:textColor="@color/white"
-        android:textSize="16dp"
-        android:gravity="center"/>
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineButton"
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/createAccountButton"
-        android:layout_width="304dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzleBlue"
@@ -60,15 +71,16 @@
         android:gravity="center"
         android:text="Create Account"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signinButton" />
+        app:layout_constraintTop_toBottomOf="@id/signinButton"
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/notSigninButton"
-        android:layout_width="304dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/lightGray"
@@ -76,10 +88,11 @@
         android:gravity="center"
         android:text="Using without Sign In"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/createAccountButton" />
+        app:layout_constraintTop_toBottomOf="@id/createAccountButton"
+        app:layout_constraintWidth_percent="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
