--- a/app/src/main/res/drawable/shadow_background.xml
+++ b/app/src/main/res/drawable/shadow_background.xml
@@ -1,24 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Drop Shadow Stack -->
-    <item> <shape>
-        <padding android:top="0dp" android:right="1dp" android:bottom="2dp" android:left="0dp" />
-        <corners android:radius="40dp" /> <solid android:color="#00CCCCCC" />
-    </shape> </item>
-    <item> <shape>
-        <padding android:top="0dp" android:right="1dp" android:bottom="2dp" android:left= "0dp" />
-        <corners android:radius="40dp" /> <solid android:color="#10CCCCCC" /> </shape> </item>
-    <item> <shape>
-        <padding android:top="0dp" android:right="1dp" android:bottom="2dp" android:left="0dp" />
-        <corners android:radius="40dp" /> <solid android:color="#20CCCCCC" /> </shape> </item>
-    <item> <shape>
-        <padding android:top="0dp" android:right="1dp" android:bottom="2dp" android:left="0dp" />
-        <corners android:radius="40dp" /> <solid android:color="#30CCCCCC" /> </shape> </item>
-    <item> <shape>
-        <padding android:top="0dp" android:right="1dp" android:bottom="2dp" android:left="0dp" />
-        <corners android:radius="40dp" /> <solid android:color="#50CCCCCC" /> </shape> </item>
+    <item>
+        <shape>
+            <padding
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="1dp"
+                android:top="0dp" />
+            <corners android:radius="40dp" />
+            <solid android:color="#00CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="1dp"
+                android:top="0dp" />
+            <corners android:radius="40dp" />
+            <solid android:color="#10CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="1dp"
+                android:top="0dp" />
+            <corners android:radius="40dp" />
+            <solid android:color="#20CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="1dp"
+                android:top="0dp" />
+            <corners android:radius="40dp" />
+            <solid android:color="#30CCCCCC" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding
+                android:bottom="2dp"
+                android:left="0dp"
+                android:right="1dp"
+                android:top="0dp" />
+            <corners android:radius="40dp" />
+            <solid android:color="#50CCCCCC" />
+        </shape>
+    </item>
 
     <!-- Background -->
-    <item> <shape>
-        <solid android:color="@color/white"/><corners android:radius="40dp" /></shape> </item>
+    <item>
+        <shape>
+            <solid android:color="@color/white" />
+            <corners android:radius="40dp" />
+        </shape>
+    </item>
 </layer-list>
