--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -13,54 +13,61 @@
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/vector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
 
     <TextView
         android:id="@+id/titleChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Change Password"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/backButton"
-        app:layout_constraintBottom_toBottomOf="@id/backButton"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/backButton" />
 
     <TextView
         android:id="@+id/changePasswordTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:text="Current Password"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleChangePassword"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"/>
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@id/titleChangePassword" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/currentPasswordLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/changePasswordTextview"
-        android:layout_marginStart="40dp"
-        app:passwordToggleEnabled="true"
+        app:layout_constraintWidth_percent="0.8"
         app:passwordToggleDrawable="@drawable/toggle_icon_status"
-        app:passwordToggleTint="@color/danzlePink"
-        app:errorEnabled="true">
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/danzlePink">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/cuurentPassword"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:inputType="textPassword"
             android:background="@drawable/edittext_box"
+            android:inputType="textPassword"
             android:paddingHorizontal="8dp"
-            android:paddingVertical="12dp"/>
+            android:paddingVertical="12dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,31 +76,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Password"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentPasswordLayout"
-        android:layout_marginStart="40dp" />
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@id/currentPasswordLayout" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/newPasswordLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/newPasswordTextview"
-        android:layout_marginStart="40dp"
-        app:passwordToggleEnabled="true"
+        app:layout_constraintWidth_percent="0.8"
         app:passwordToggleDrawable="@drawable/toggle_icon_status"
-        app:passwordToggleTint="@color/danzlePink"
-        app:errorEnabled="true">
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/danzlePink">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/newPassword"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:inputType="textPassword"
             android:background="@drawable/edittext_box"
+            android:inputType="textPassword"
             android:paddingHorizontal="8dp"
-            android:paddingVertical="12dp"/>
+            android:paddingVertical="12dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,49 +110,50 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm Password"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newPasswordLayout"
-        android:layout_marginStart="40dp" />
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@id/newPasswordLayout" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/confirmPasswordLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextview"
-        android:layout_marginStart="40dp"
-        app:passwordToggleEnabled="true"
+        app:layout_constraintWidth_percent="0.8"
         app:passwordToggleDrawable="@drawable/toggle_icon_status"
-        app:passwordToggleTint="@color/danzlePink"
-        app:errorEnabled="true">
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/danzlePink">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confirmPassword"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:inputType="textPassword"
             android:background="@drawable/edittext_box"
+            android:inputType="textPassword"
             android:paddingHorizontal="8dp"
-            android:paddingVertical="12dp"/>
+            android:paddingVertical="12dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <Button
         android:id="@+id/changePasswordButton"
-        android:layout_width="320dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzlePink"
+        android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:text="Change Password"
         android:textColor="@color/white"
-        android:textSize="16dp"
-        android:fontFamily="@font/inter_18pt_semibold"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
