--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -13,49 +13,57 @@
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/vector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/titleUsermane"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Change Username"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/backButton"
-        app:layout_constraintBottom_toBottomOf="@id/backButton"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/backButton" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.13" />
 
 
     <EditText
         android:id="@+id/changeUsernameEdittext"
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="46dp"
         android:background="@drawable/edittext_box"
         android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleUsermane"
-        android:layout_marginTop="50dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/changeUsernameButton"
-        android:layout_width="320dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzlePink"
+        android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:text="Change Username"
         android:textColor="@color/white"
-        android:textSize="16dp"
-        android:fontFamily="@font/inter_18pt_semibold"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/changeUsernameEdittext"
-        android:layout_marginTop="50dp"/>
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
