--- a/app/src/main/res/layout/activity_forgot_password1.xml
+++ b/app/src/main/res/layout/activity_forgot_password1.xml
@@ -14,63 +14,72 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgotten Password"
-        android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@id/cancelButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cancelButton"
-        app:layout_constraintBottom_toBottomOf="@id/cancelButton"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/cancelButton" />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:background="@drawable/cancel"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"/>
+        android:layout_marginEnd="18dp"
+        android:background="@drawable/cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineHorizontalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1" />
+
 
     <TextView
         android:id="@+id/sentenceTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Type in your account email and we'll send you \nan email with a new password."
         android:textColor="@color/grayText"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextview"
-        android:layout_marginTop="30dp"
-        android:text="Type in your account email and we'll send you \nan email with a new password."/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalText" />
 
     <EditText
         android:id="@+id/emailEdittext"
-        android:layout_width="320dp"
+        android:layout_width="0dp"
         android:layout_height="46dp"
-        android:inputType="text"
-        android:hint="  Writing an Email"
-        android:textSize="12dp"
-        android:textColorHint="@color/grayText"
-        android:textColorHighlight="@color/black"
+        android:layout_marginTop="20dp"
         android:background="@drawable/edittext_box"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="  Writing an Email"
+        android:inputType="text"
+        android:textColorHighlight="@color/black"
+        android:textColorHint="@color/grayText"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sentenceTextview"
-        android:layout_marginTop="15dp"/>
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/sendEmailButton"
-        android:layout_width="320dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzlePink"
+        android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:text="Send Email"
         android:textColor="@color/white"
-        android:textSize="16dp"
-        android:fontFamily="@font/inter_18pt_semibold"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailEdittext" />
+        app:layout_constraintTop_toBottomOf="@id/emailEdittext"
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
