--- a/app/src/main/res/layout/activity_info_app.xml
+++ b/app/src/main/res/layout/activity_info_app.xml
@@ -12,109 +12,134 @@
         android:id="@+id/vector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/vector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/alarm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVerticalTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
 
     <ImageView
         android:id="@+id/infoIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/info2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vector"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintStart_toStartOf="@id/guidelineVerticalTitle"
+        app:layout_constraintTop_toBottomOf="@id/vector" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Info App"
-        android:textSize="22dp"
+        android:layout_marginStart="15dp"
         android:fontFamily="@font/inter_18pt_medium"
-        app:layout_constraintStart_toEndOf="@id/infoIcon"
+        android:text="Info App"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@id/infoIcon"
-        android:layout_marginStart="15dp"/>
+        app:layout_constraintStart_toEndOf="@id/infoIcon" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineHorizontalContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.2" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/infoIcon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="40dp"
+        android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/white"
-        android:background="@drawable/button_round_radius">
-        
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalContent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineVertical1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.13" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineVertical2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.87" />
+
         <ImageView
             android:id="@+id/licenseImage"
             android:layout_width="25dp"
             android:layout_height="30dp"
-            android:background="@drawable/license"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="50dp"
-            android:layout_marginStart="50dp"/>
+            android:background="@drawable/license"
+            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/licenseText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="License"
-            android:textSize="16dp"
-            app:layout_constraintStart_toEndOf="@id/licenseImage"
             android:layout_marginStart="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/licenseImage"/>
-        
+            android:text="License"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/licenseImage"
+            app:layout_constraintStart_toEndOf="@id/licenseImage"
+            app:layout_constraintTop_toTopOf="@id/licenseImage" />
+
         <ImageView
             android:id="@+id/licenseNext"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/next"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/licenseImage"
-            android:layout_marginStart="200dp"
-            android:layout_marginEnd="30dp"/>
+            app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
+            app:layout_constraintTop_toTopOf="@id/licenseImage" />
 
         <ImageView
             android:id="@+id/helpImage"
             android:layout_width="25dp"
             android:layout_height="30dp"
-            android:background="@drawable/help"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/licenseImage"
             android:layout_marginTop="50dp"
-            android:layout_marginStart="50dp"/>
+            android:background="@drawable/help"
+            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
+            app:layout_constraintTop_toBottomOf="@id/licenseImage" />
 
         <TextView
             android:id="@+id/helpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Help Center"
-            android:textSize="16dp"
-            app:layout_constraintStart_toEndOf="@id/helpImage"
             android:layout_marginStart="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/helpImage"/>
+            android:text="Help Center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/helpImage"
+            app:layout_constraintStart_toEndOf="@id/helpImage"
+            app:layout_constraintTop_toTopOf="@id/helpImage" />
 
         <ImageView
             android:id="@+id/helpNext"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/next"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/helpImage"
-            android:layout_marginEnd="30dp"/>
+            app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
+            app:layout_constraintTop_toTopOf="@id/helpImage" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
