--- a/app/src/main/res/layout/activity_music_select_popup.xml
+++ b/app/src/main/res/layout/activity_music_select_popup.xml
@@ -12,93 +12,105 @@
         android:id="@+id/cancelButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/cancel"
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
 
     <ImageView
         android:id="@+id/songImage"
         android:layout_width="158dp"
         android:layout_height="158dp"
         android:background="@drawable/albumcover"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/songName"
-        android:layout_marginTop="210dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineImage" />
 
     <TextView
         android:id="@+id/songName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mantra"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/inter_18pt_semibold"
-        android:textSize="26dp"
+        android:text="Mantra"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/songImage"
-        android:layout_marginTop="10dp"/>
-    
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/songImage" />
+
     <TextView
         android:id="@+id/artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jennie"
         android:fontFamily="@font/inter_18pt_bold"
-        android:textSize="18dp"
+        android:text="Jennie"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/songTime"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/songName"
-        app:layout_constraintBottom_toTopOf="@id/songTime"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/songName" />
 
     <TextView
         android:id="@+id/songTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="01:06"
         android:fontFamily="@font/inter_18pt_bold"
-        android:textSize="18dp"
+        android:text="01:06"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/artist"
-        app:layout_constraintBottom_toTopOf="@id/full"/>
-    
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/artist" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.62" />
+
     <Button
         android:id="@+id/full"
-        android:layout_width="148dp"
-        android:layout_height="31dp"
-        android:text="FULL"
-        android:gravity="center"
-        android:fontFamily="@font/inter_18pt_semibold"
-        android:textSize="18dp"
-        android:textColor="@color/white"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
         android:background="@drawable/square_radius"
         android:backgroundTint="#8C000000"
-        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/inter_18pt_semibold"
+        android:gravity="center"
+        android:text="FULL"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/highlight"
-        app:layout_constraintTop_toBottomOf="@id/songTime"
-        android:layout_marginTop="85dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineButton"
+        app:layout_constraintWidth_percent="0.4" />
 
     <Button
         android:id="@+id/highlight"
-        android:layout_width="148dp"
-        android:layout_height="31dp"
-        android:text="HIGHLIGHT"
-        android:gravity="center"
-        android:textSize="18dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/inter_18pt_semibold"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
         android:background="@drawable/square_radius"
         android:backgroundTint="#8C000000"
-        app:layout_constraintStart_toEndOf="@id/full"
+        android:fontFamily="@font/inter_18pt_semibold"
+        android:gravity="center"
+        android:text="HIGHLIGHT"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/songTime"
-        android:layout_marginTop="85dp"/>
+        app:layout_constraintStart_toEndOf="@id/full"
+        app:layout_constraintTop_toTopOf="@id/guidelineButton"
+        app:layout_constraintWidth_percent="0.4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
