--- a/app/src/main/res/layout/activity_my_score.xml
+++ b/app/src/main/res/layout/activity_my_score.xml
@@ -11,65 +11,70 @@
         android:id="@+id/vector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/vector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/alarm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVerticalTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
 
     <ImageView
         android:id="@+id/scoreIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/score2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vector"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintStart_toStartOf="@id/guidelineVerticalTitle"
+        app:layout_constraintTop_toBottomOf="@id/vector" />
 
     <TextView
         android:id="@+id/scoreTitleTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="score"
-        android:textSize="24dp"
+        android:layout_marginStart="15dp"
         android:fontFamily="@font/inter_18pt_medium"
-        app:layout_constraintStart_toEndOf="@id/scoreIcon"
+        android:text="score"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/scoreIcon"
-        android:layout_marginStart="15dp"/>
+        app:layout_constraintStart_toEndOf="@id/scoreIcon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/score"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/scoreTitleTextview"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/scoreTitleTextview">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/scoreRecyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         </androidx.recyclerview.widget.RecyclerView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
