--- a/app/src/main/res/layout/activity_my_video.xml
+++ b/app/src/main/res/layout/activity_my_video.xml
@@ -11,90 +11,96 @@
         android:id="@+id/vector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/vector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/alarm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVerticalTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
 
     <ImageView
         android:id="@+id/scoreIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/video2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vector"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintStart_toStartOf="@id/guidelineVerticalTitle"
+        app:layout_constraintTop_toBottomOf="@id/vector" />
 
     <TextView
         android:id="@+id/videoTitleTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="video"
-        android:textSize="24dp"
+        android:layout_marginStart="15dp"
         android:fontFamily="@font/inter_18pt_medium"
-        app:layout_constraintStart_toEndOf="@id/scoreIcon"
+        android:text="video"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/scoreIcon"
-        android:layout_marginStart="15dp"/>
+        app:layout_constraintStart_toEndOf="@id/scoreIcon" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/practiceVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/videoTitleTextview"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/videoTitleTextview">
 
         <TextView
             android:id="@+id/practiceTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
             android:text="pactice"
-            android:textSize="24dp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="30dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/practiceMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:text="more..."
             android:textColor="@color/grayText"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@id/practiceVideoRecyclerviewLayout"
-            android:layout_marginBottom="5dp"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/practiceVideoRecyclerviewLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/practiceTextview"
-            android:layout_marginTop="10dp">
+            app:layout_constraintTop_toBottomOf="@id/practiceTextview">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/practiceVideoRecyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -104,47 +110,47 @@
         android:id="@+id/challengeVideo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/practiceVideo"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/practiceVideo">
 
         <TextView
             android:id="@+id/challengeTextview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="30dp"
             android:text="challenge"
-            android:textSize="24dp"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="30dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/challengeMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:text="more..."
             android:textColor="@color/grayText"
-            android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@id/challengeVideoRecyclerviewLayout"
-            android:layout_marginBottom="5dp"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/challengeVideoRecyclerviewLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/challengeTextview"
-            android:layout_marginTop="10dp">
+            app:layout_constraintTop_toBottomOf="@id/challengeTextview">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/challengeVideoRecyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
             </androidx.recyclerview.widget.RecyclerView>
         </androidx.constraintlayout.widget.ConstraintLayout>
