--- a/app/src/main/res/layout/cancel_dialog.xml
+++ b/app/src/main/res/layout/cancel_dialog.xml
@@ -1,57 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="260dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    android:layout_height="wrap_content">
+
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/cancel"
         android:backgroundTint="@color/danzlePink"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:text="Are you sure you want to exit?"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp"/>
-    
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/yesButton"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/cancel_dialog_yesbutton"
+        android:gravity="center"
         android:text="Yes"
         android:textColor="@color/white"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:background="@drawable/cancel_dialog_yesbutton"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textTitle"
-        android:layout_marginTop="35dp"/>
+        app:layout_constraintWidth_percent="0.5" />
 
     <Button
         android:id="@+id/noButton"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/cancel_dialog_nobutton"
+        android:gravity="center"
         android:text="No"
         android:textColor="@color/danzlePink"
-        android:textSize="16dp"
-        android:gravity="center"
-        android:background="@drawable/cancel_dialog_nobutton"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/yesButton"
-        android:layout_marginTop="15dp"/>
+        app:layout_constraintWidth_percent="0.5" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
