--- a/app/src/main/res/layout/mypage_video_recyclerview.xml
+++ b/app/src/main/res/layout/mypage_video_recyclerview.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="155dp"
-        android:background="@color/practice_main_fragment_grayline"
+        android:background="@drawable/recyclerview_video_backgound"
+        android:clipToOutline="true"
+        android:outlineProvider="background"
+        android:scaleType="centerCrop"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jennie"
-        android:textSize="12dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/inter_18pt_medium"
-        app:layout_constraintStart_toStartOf="@id/image"
+        android:text="Jennie"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/image"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:layout_marginTop="5dp"/>
+        app:layout_constraintStart_toStartOf="@id/image"
+        app:layout_constraintTop_toBottomOf="@id/image" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
