--- a/app/src/main/res/layout/profile_updated_dialog.xml
+++ b/app/src/main/res/layout/profile_updated_dialog.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/custom_radius_background">
-    
+
     <ImageView
         android:id="@+id/confirmImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/confirmicon"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="25dp"/>
-    
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Profile Updated!"
-        android:textSize="25dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/inter_18pt_medium"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Profile Updated!"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirmImage"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmImage" />
 
 
     <TextView
         android:id="@+id/textSubTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:text="Your profile detail has been updated."
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textTitle"
-        android:layout_marginTop="5dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textTitle" />
 
     <Button
         android:id="@+id/confirmButton"
-        android:layout_width="304dp"
+        android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzlePink"
-        android:text="confirm"
-        android:textSize="16dp"
-        android:textColor="@color/white"
         android:fontFamily="@font/inter_18pt_medium"
         android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textSubTitle"
+        android:text="confirm"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="30dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textSubTitle"
+        app:layout_constraintWidth_percent="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
